# CrossPlatformLibrary

./: README.md
builds/cmake/: CMakeLists.txt
builds/cmake/basic/: CMakeLists.txt
builds/msvc/: CrossPlatformLibrary.sln
builds/msvc/UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters
builds/msvc/basic/: basic.vcxproj  basic.vcxproj.filters
builds/msvc/remote/: remote.vcxproj  remote.vcxproj.filters
include/: basic.h  remote.h
include/basic/: base_def.h  base_time.h  err.h  except.h  milli_time.h  mutex.h  thread_base.h  type_def.h
include/remote/: remote_def.h  remote_object.h  zmq_msg.h  zmq_server.h
src/UnitTest/: main.cpp  thread_test.cpp  thread_test.h
src/basic/: base_time.cpp  err.cpp  err.h  thread_base.cpp
src/remote/: remote_object.cpp  zmq_msg.cpp  zmq_server.cpp  zmq_worker.cpp  zmq_worker.h
